# vci

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: vci-config.cmake.in
include/vci/: ascii.hpp  terminal.hpp  video_decoder.hpp
src/: ascii.cpp  main.cpp  terminal.cpp  video_decoder.cpp
